# powerline-tailscale

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: package.yml
powerline_tailscale/: __init__.py  segments.py
tests/: test_powerlinetailscale.py
